# cookiecutter-pypackage

./: CONTRIBUTING.rst  README.rst  cookiecutter.json
docs/: prompts.rst
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .editorconfig  .pre-commit-config.yaml  CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  setup.py  tox.ini
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: bug.md  feature_request.md  regression.md
{{cookiecutter.project_slug}}/.github/workflows/: check.yml  publish.yml
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
